force-app/main/default/objects/Candidate__c/fields/Candidate_Roll_Number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Roll_Number__c</fullName>
    <label>Candidate Roll Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>