force-app/main/default/objects/Candidate__c/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <label>College Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>