force-app/main/default/objects/Candidate__c/fields/Governament__c.field-meta.xml
<CustomField>
    <fullName>Governament__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Governament</label>
    <referenceTo>Governament__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>