force-app/main/default/objects/Candidate__c/fields/Joining__c.field-meta.xml
<CustomField>
    <fullName>Joining__c</fullName>
    <label>Joining</label>
    <type>Date</type>
</CustomField>