force-app/main/default/objects/Candidate__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Percentage</label>
    <precision>16</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>