force-app/main/default/objects/Candidate__c/recordTypes/R_student.recordType-meta.xml
<RecordType>
    <fullName>R_student</fullName>
    <active>true</active>
    <label>R student</label>
</RecordType>