force-app/main/default/objects/Candidate__c/listViews/assign_the_record_Candidate.listView-meta.xml
<ListView>
    <fullName>assign_the_record_Candidate</fullName>
    <filterScope>Queue</filterScope>
    <label>assign the record</label>
    <queue>assign_the_record</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>